--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,5 +8,8 @@ sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
 dependencies {
+    compile rxDependencies.rxJava
 
+    testCompile testingDependencies.junit
+    testCompile testingDependencies.mockito
 }
